fix for work with main site

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,8 +4,8 @@
 
 <body class="preload">
     <div class="top"></div>
-    <div class="profile" style="background-image: url({{ site.background }});">
-        <img src="{{ site.url }}/il_logo.png" class="img-circle"/>
+    <div class="profile" style="background-image: url({{ site.baseurl }}{{ site.background }});">
+        <img src="{{ site.baseurl }}/il_logo.png" class="img-circle"/>
         <h3>{{ site.name }}</h3>
         <p>{{ site.description }}</p>
         <div class="social">
